[package]
name = "login-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = [] }
axum = "0.7.7"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
